Ndryshimet e fundit prej meje, tek login, krijimi i adminit

--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@ font-family:Arial, Helvetica, sans-serif;
 </div>
   Kyqja
 </h2>
-<form  method="post" action="" name="kyqja" id="frmkyqja">
+<form  method="post" action="admini/index.html" name="kyqja" id="frmkyqja">
  
              
             <input type="text" name="perdoruesi" placeholder="Perdoruesi" id="emri" tabindex="1" autofocus />
