--- a/admini/index.html
+++ b/admini/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-  <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+  <link rel="stylesheet" type="text/css" href="../style/style.css" title="style" />
 </head>
 
 <body>
@@ -23,12 +23,12 @@
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">Kryefaqja</a></li>
-          <li><a href="konkurset.html">Konkurset</a></li>
+          <li><a href="aplikantet.html">Aplikant&euml;t</a></li>
         <!--   <li><a href="page.html">A Page</a></li>
           <li><a href="another_page.html">Another Page</a></li> -->
-          <li ><a href="contact.html">Kontakti</a></li>
+        
 
-          <li style="margin-left: 349px;"><a href="login.html">Kycja</a></li>
+          <li style="margin-left: 480px;"><a href="index.html">Admini</a></li>
         </ul>
       </div>
     </div>
@@ -56,7 +56,7 @@
         <!-- insert the page content here -->
         <h1>Prizreni</h1>
        
-        <img src="img/pz.jpg" width="550" height="350">
+        <img src="../img/pz.jpg" width="550" height="350">
         </br></br>
       </div>
     </div>
