--- a/contact.html
+++ b/contact.html
@@ -53,22 +53,22 @@
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Contact Us</h1>
-        <p>Below is an example of how a contact form might look with this template:</p>
+        <h1>Na kontaktoni</h1>
+        
         <form action="#" method="post">
           <div class="form_settings">
-            <p><span>Name</span><input class="contact" type="text" name="your_name" value="" /></p>
+            <p><span>Emri</span><input class="contact" type="text" name="your_name" value="" /></p>
             <p><span>Email Address</span><input class="contact" type="text" name="your_email" value="" /></p>
-            <p><span>Message</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p>
+            <p><span>Mesazhi</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p>
             <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="submit" /></p>
           </div>
         </form>
-        <p><br /><br />NOTE: A contact form such as this would require some way of emailing the input to an email address.</p>
+        
       </div>
     </div>
     <div id="content_footer"></div>
     <div id="footer">
-      Copyright &copy; colour_blue | <a href="http://validator.w3.org/check?uri=referer">HTML5</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> | <a href="http://www.html5webtemplates.co.uk">design from HTML5webtemplates.co.uk</a>
+      Copyright &copy; The Powerpuff Girls
     </div>
   </div>
 </body>
