--- a/konkurset.html
+++ b/konkurset.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+  <link rel="stylesheet" type="text/css" href="bootstrap.css" title="style" />
   <link rel="stylesheet" href="style/font-awesome-4.7.0/css/font-awesome.min.">
 </head>
 
@@ -43,37 +44,37 @@
            <tr>
              <td><img src="img/pdf-icon.png" height="17"></td>
              <td>Konkurs per mesimdhenes</td>
-              <td><button class="btn btn-default">Apliko</button></td>
+              <td><a class="btn btn-default" href="aplikimi/index.html" role="button">Apliko</a></td>
            </tr>
 
             <tr>
              <td><img src="img/pdf-icon.png" height="17"></td>
              <td>Konkurs per drejtor</td>
-             <td><button class="submit"">Apliko</button></td>
+             <td><a class="btn btn-default" href="aplikimi/index.html" role="button">Apliko</a></td>
            </tr>
 
             <tr>
              <td><img src="img/pdf-icon.png" height="17"></td>
              <td>Konkurs</td>
-              <td><button class="btn btn-default">Apliko</button></td>
+              <td><a class="btn btn-default" href="aplikimi/index.html" role="button">Apliko</a></td>
            </tr>
 
             <tr>
              <td><img src="img/pdf-icon.png" height="17"></td>
              <td>Konkurs per puntor social</td>
-              <td><button class="btn btn-default">Apliko</button></td>
+              <td><a class="btn btn-default" href="aplikimi/index.html" role="button">Apliko</a></td>
            </tr>
 
                 <tr>
              <td><img src="img/pdf-icon.png" height="17"></td>
              <td>Konkurs per mesimdhenes</td>
-              <td><button class="btn btn-default">Apliko</button></td>
+              <td><a class="btn btn-default" href="aplikimi/index.html" role="button">Apliko</a></td>
            </tr>
 
             <tr>
              <td><img src="img/pdf-icon.png" height="17"></td>
              <td>Konkurs per mesimdhenes</td>
-              <td><button class="btn btn-default">Apliko</button></td>
+              <td><a class="btn btn-default" href="aplikimi/index.html" role="button">Apliko</a></td>
            </tr>
 
         </table>
