u ndrru fotoja detajet

--- a/admini/readmore.html
+++ b/admini/readmore.html
@@ -39,7 +39,7 @@
         <!-- insert the page content here -->
       
        
-       <img src="../img/detajet.png">
+       <img src="../img/detajet.png" width="800">
         </br></br></br>
 
       </div>
